# stemmer-rs

./: .gitignore  Cargo.toml  ChangeLog.md  README.md  build.rs
libstemmer_c/: README.md
src/: lib.rs  main.rs  stemmer.rs  test.rs
