[package]
name = "stemmer"
version = "0.3.0"
authors = ["Elisabeth Henry <liz.henry@ouvaton.org>"]
license = "BSD-2-Clause"
readme = "README.md"
homepage = "https://github.com/lady-segfault/stemmer-rs"
documentation = "http://lady-segfault.github.io/stemmer/index.html"
repository = "https://github.com/lady-segfault/stemmer-rs"
description = "Stemming library for Rust, using bindings to Snowball C implementation"
links = "stemmer"
build = "build.rs"

[build-dependencies]
gcc = "*"

[dependencies]
libc = "0.1"