[package]
name = "stemmer"
version = "0.3.2-unreleased"
authors = ["Élisabeth Henry <liz.henry@ouvaton.org>"]
license = "BSD-2-Clause"
readme = "README.md"
homepage = "https://github.com/lise-henry/stemmer-rs"
documentation = "http://lise-henry.github.io/rust/stemmer/index.html"
repository = "https://github.com/lise-henry/stemmer-rs"
description = "Stemming library for Rust, using bindings to Snowball C implementation"
links = "stemmer"
build = "build.rs"

[build-dependencies]
gcc = "0.3"

[dependencies]
libc = "0.2"
